--- a/modules/1237/pages/doc6.adoc
+++ b/modules/1237/pages/doc6.adoc
@@ -84,45 +84,60 @@ ____
 |
 [verse]
 ____
-Chamber Deed of Sale [issued in place of a formal purchase deed]
-for the Tenant Farmer Krückeberg
-No. 10 in Berenbusch
-concerning a plot for the enlargement
-of his garden.
+Chamber Deed of Sale
+for Tenant Farmer Krückeberg,
+No. 10 in Berenbusch,
+concerning a plot for enlarging his garden.
 
 Dispatched by Beÿer
 
-After, upon request by the colonist Jobst Heinrich Krückeberg No. 10 in
-Berenbusch, district of Bückeburg, permission was granted by the Comital
-Guardianship Treasury Office that, for the enlargement of his garden and
-courtyard area, two plots situated on the village street be assigned to him and
-transferred to him by purchase in such a way that he shall pay 24
-Mariengroschen per square rod; and thereafter these parcels were measured by a
-sworn land surveyor, namely: the first for the enlargement of his garden at 19
-rods, 44 feet, decimal, and the second for the courtyard area at 1 rod, 90
-feet, decimal, large— and the purchase price, according to the set rate, was
-paid in the amount of 14 Reichsthaler, 8 Groschen, 1 Pfennig to the Comital
-Treasury; whereupon the aforementioned colonist Krückeberg is obliged to pay
-the assigned land tax and contributions on these two parcels, as well as
-ordinary and extraordinary levies to assume them and to enter them accurately
-at the proper time into the accounts of the Office of Bückeburg; Thus, the
-ownership of these parcels purchased by him is hereby transferred to the
-colonist Jobst Heinrich Krückeberg No. 10 in Berenbusch and his heirs, and the
-assurance is given that he and his heirs shall at all times and against all
-persons be protected in their possession.
+At the request of tenant farmer Jobst
+Heinrich Krückeberg, No. 10 in Berenbusch
+(district of Bückeburg), the Comital
+Guardianship Treasury Office granted
+permission for him to enlarge his garden and
+courtyard. Two plots on the village street
+were assigned to him for purchase, at the
+price of 24 Mariengroschen per square rod.
 
-As proof of this, this document in place of a formal deed of sale has been
-issued under the impressed comital guardianship treasury seal and customary
-signature.
-So issued
-Bückeburg, December 1800.
+A sworn land surveyor measured the parcels:
 
-Directors and councillors appointed
-to the Comital Schaumburg-Lippe
+the first, for the garden, at 19 rods and 44
+feet (decimal)
+
+the second, for the courtyard, at 1 rod and
+90 feet (decimal)
+
+The total purchase price, according to the
+set rate, amounted to 14 Reichsthaler, 8
+Mariengroschen, and 1 Pfennig, which was paid
+into the Comital Treasury.
+
+Krückeberg is obliged to pay the annual
+ground rent and contributions assessed on
+these two parcels, together with both
+ordinary and extraordinary taxes, and to
+settle them each year in the accounts of the
+Bückeburg Office.
+
+Ownership of the purchased plots is hereby
+transferred to Jobst Heinrich Krückeberg and
+his heirs, with the guarantee that they shall
+be protected in their possession at all times
+and against all claims.
+
+As proof, this document — issued in place of
+a formal purchase deed — has been executed
+under the impressed Comital Guardianship
+Treasury seal and customary signature.
+
+Issued at Bückeburg, December 1800.
+
+Directors and Councillors
+of the Comital Schaumburg-Lippe
 Guardianship Treasury Office:
 
-Gladbeck, von Landesberg, Maas,
-Windt
+Gladbeck · von Landesberg · Maas · Windt
 
 Wippermann
 ____
