--- a/modules/1237/pages/doc6.adoc
+++ b/modules/1237/pages/doc6.adoc
@@ -1,4 +1,4 @@
-= Document 6: Final Decision
+= Document 6: Deed Issued
 :page-role: wide
 
 In December, 1800, the Gräflich Schaumburg-Lippische vormundschaftliche Rentcammer (Comital Schaumburg-Lippe
