--- a/modules/1237/pages/doc5-rescripts.adoc
+++ b/modules/1237/pages/doc5-rescripts.adoc
@@ -5,7 +5,7 @@ image::09-right-page.png[link=self]
 image::10-left-page.png[link=self]
 
 [[rescript1]]
-== Approval of Land Assignment – Krückeberg, Berenbusch
+== Terms Confirmed
 
 [cols="1a,1a",options="header",frame=none,grid=none]
 |===
@@ -106,7 +106,7 @@ ____
 |===
 
 [[rescript2]]
-== Execution of Purchase Contracts – Krückeberg, Berenbusch
+== Payment Ordered 
 
 [cols="1a,1a",options="header",frame=none,grid=none]
 |===
