--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -32,8 +32,8 @@
 ** xref:doc4pt5.adoc[]
 * xref:doc5-overview.adoc[]
 ** xref:doc5-header.adoc[]
-** xref:doc5-rescripts.adoc#rescript1[Rescript 1 - Approval]
-** xref:doc5-rescripts.adoc#rescript2[Rescript 2 - Contracts]
+** xref:doc5-rescripts.adoc#rescript1[]
+** xref:doc5-rescripts.adoc#rescript2[]
 //*** xref:doc5-collection-order.adoc[]
 * xref:doc6.adoc[]
 ** xref:doc6-header.adoc[]
