--- a/modules/1237/pages/doc4pt5.adoc
+++ b/modules/1237/pages/doc4pt5.adoc
@@ -1,4 +1,4 @@
-= Document 4½: Surveyor's Drawing of Two Parcels (March 30, 1799)
+= Geometric Drawing of Two Parcels (March 30, 1799)
 :page-role: wide
 
 image::08-right-page.png[link=self]
