--- a/modules/1237/pages/doc5-overview.adoc
+++ b/modules/1237/pages/doc5-overview.adoc
@@ -1,4 +1,4 @@
-= Document 5: Approval and Contracts (Oct 1800)
+= Document 5: Terms and Payment (Oct 1800)
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
 |===
