--- a/modules/1237/pages/doc6.adoc
+++ b/modules/1237/pages/doc6.adoc
@@ -69,7 +69,7 @@ briefs unter beÿ gedruckten Gräfl.  
 vormundschaftln Cam̅ersiegel und  
 gewöhnlicher Unterschrift ausge-  
 fertiget worden. So geschehen  
-Bückeburg d. December 1800.  
+Bückeburg d. 1 December 1800.  
 
 Grafl: Schaumburg; Lippische zur  
 vormundschaftliche Rentcammer  
@@ -131,7 +131,7 @@ a formal purchase deed — has been executed
 under the impressed Comital Guardianship
 Treasury seal and customary signature.
 
-Issued at Bückeburg, December 1800.
+Issued at Bückeburg, December 1, 1800.
 
 Directors and Councillors
 of the Comital Schaumburg-Lippe
