--- a/modules/1237/pages/doc6-overview.adoc
+++ b/modules/1237/pages/doc6-overview.adoc
@@ -4,7 +4,7 @@ image::11.png[scale=25,link=self]
 
 == Narrative Overview — Document 6
 
-=== Final Transfer of Ownership (December 1800)
+=== Final Transfer of Ownership (December 1, 1800)
 
 Document 6, titled *Concept Cammeral:Kaufbriefs*, is the final instrument in the case.  
 It serves *in place of a formal, sealed deed of sale* (*Kaufbrief*) and officially transfers ownership of the purchased parcels to **Jobst Heinrich Krückeberg, No. 10 in Berenbusch**, and his heirs.
