--- a/modules/1237/pages/doc4-overview.adoc
+++ b/modules/1237/pages/doc4-overview.adoc
@@ -1,8 +1,8 @@
-= Document 4: Overview
+= Document 4: Survey and Recommentation (Oct 18, 1800)
 
 == Narrative Overview
 
-=== Transmission of Survey Drawing and Recommendation (18 October 1800)
+=== Transmission of Survey Drawing and Recommendation (October 18, 1800)
 
 On **18 October 1800**, the Ämter of Bückeburg and Arensburg sent a formal report to the Vormundschaftliche Kammer,
 responding to the Cammer’s directive of **11 March 1799** (Document 3). The header notes the Cammer file number
