--- a/modules/1237/pages/doc1-overview.adoc
+++ b/modules/1237/pages/doc1-overview.adoc
@@ -1,4 +1,4 @@
-= Document 1: Petition and Forestry Office Assessment Regarding Land Expansion (29–30 May 1798) 
+= Document 1: Petition and Forestry Office Assessment Regarding Land Expansion (May 29–30, 1798) 
 
 The small handwritten text in the left and right images is the petition  written on behalf of Jobst Heinrich
 Krückeberg for enlarging his farmyard and garden. The larger text is the Forestry Office assessment of the impact
