--- a/modules/1237/pages/doc4.adoc
+++ b/modules/1237/pages/doc4.adoc
@@ -1,4 +1,4 @@
-= Document 4: Submission of Geometric Drawing of Proposed Parcels to be Allocated (Oct 18,1800)
+= Document 4: Submission of Geometric Drawing of Proposed Parcels to be Allocated
 :page-role: wide
 
 Document No. 4 (numbered "4" in the upper-right corner) is a formal report from the Ämter Bückeburg and Arensburg
