--- a/modules/1237/pages/doc1-admin-note.adoc
+++ b/modules/1237/pages/doc1-admin-note.adoc
@@ -44,5 +44,6 @@ dem Amts:: Dative case of *das Amt*, meaning “to the office” or “to the au
 zum Berichte:: “For the report.” Indicates the document was submitted to be included in or referenced in an official report.
 B. 18°:: Abbreviation for *Beilage 18*, meaning “Appendix” or “Enclosure 18.” The ° symbol is a historical shorthand often used for ordinal or enumerative reference.
 Febr:: Abbreviation for *Februar* (February).
-MKaas:: Likely the first initial and surname or signature of the person submitting or certifying the note.
+MKaas:: "M" is likely the first initial and "Kaas" the surname of the Forestry Office official, whose wrote the
+Forestry Office assessment. His signature also appears on other Cammer (Chamber) documents.
 
