--- a/modules/1237/pages/doc2-header.adoc
+++ b/modules/1237/pages/doc2-header.adoc
@@ -31,6 +31,6 @@ was presented before the *Vormundschaftlichte Cammer*, the guardianship chamber,
 authority that makes binding decisions.
 
 * *"Cam: Nr:53"* -- or *"Cam[mer] No. 53"* in the upper left is an internal archiving, filing and retreival number assignment to document 2
-by the Vormundschaftliche Cammer.
+by the Vormundschaftliche Cammer, the Guardianship Chamber.
 * *"Forst-Sachen"* -- indicates the topic of the document: it concerned forestry matters.
 
