--- a/modules/1237/pages/doc4.adoc
+++ b/modules/1237/pages/doc4.adoc
@@ -99,55 +99,45 @@ ____
 
 === Glossary of Terms
 
-Cam: Nr.::
-  Abbreviation of *Cammeral Nummer* (Chamber Number) — an internal file number for bureaucratic or administrative tracking, often related to fiscal or forestry matters.
+Cam: Nr.:: Abbreviation of *Cammeral Nummer* (Chamber Number) — an internal file number for bureaucratic or
+administrative tracking, often related to fiscal or forestry matters.
 
-Forstsachen::
-  Forestry matters — administrative category concerning land, timber, forest use, or related disputes and policies.
+Betr.:: Abbreviation of *Betreff*, meaning “Subject.” Used to label the topic of a report or document.
 
-Vormundschaftliche Kammer::
-  Guardianship Chamber — a department responsible for overseeing legal and financial matters involving wards, orphans, or protected individuals.
+Ausweisung:: Allocation or designation — typically of land or property, especially in relation to rights of use,
+ownership, or expansion.
 
-Betr.::
-  Abbreviation of *Betreff*, meaning “Subject.” Used to label the topic of a report or document.
+Rescript:: A formal written decision or decree from a higher authority (often a sovereign or government office),
+typically in response to a petition.
 
-Ausweisung::
-  Allocation or designation — typically of land or property, especially in relation to rights of use, ownership, or expansion.
+Ruthe (plural: Ruthen):: Alos spelled *Rute*. Historical unit of length or area used in German-speaking
+territories. One square Ruthe varied by region but was roughly 3.6 to 4 square meters.
 
-Rescript::
-  A formal written decision or decree from a higher authority (often a sovereign or government office), typically in response to a petition.
+Fuß:: Foot — an old unit of measurement (about 30 cm). Used in combination with *Ruthe* to express land dimensions.
 
-Ruthe (plural: Ruthen)::
-  Historical unit of length or area used in German-speaking territories. One square Ruthe varied by region but was roughly 3.6 to 4 square meters.
+Flächengehalt:: Surface area or land size — literally “content of area.”
 
-Fuß::
-  Foot — an old unit of measurement (about 30 cm). Used in combination with *Ruthe* to express land dimensions.
+ohnzielgebigen Vorschlag:: Non-binding proposal — a suggestion not formally imposed, submitted for consideration
+without directive force.
 
-Flächengehalt::
-  Surface area or land size — literally “content of area.”
+Michaeli:: Feast of Saint Michael (Michaelmas), celebrated on September 29. A common traditional date in tenancy
+contracts and agricultural calendars.
 
-ohnzielgebigen Vorschlag::
-  Non-binding proposal — a suggestion not formally imposed, submitted for consideration without directive force.
+Rottzinß:: Clearance rent — a fee paid for use of cleared land (from *roden*, “to clear”). Often charged annually
+for newly allocated or deforested land.
 
-Michaeli::
-  Feast of Saint Michael (Michaelmas), celebrated on September 29. A common traditional date in tenancy contracts and agricultural calendars.
+Reichstaler (abbreviated R.):: Silver coin used as currency in many parts of the Holy Roman Empire and German
+states; one of the standard units of account.
 
-Rottzinß::
-  Clearance rent — a fee paid for use of cleared land (from *roden*, “to clear”). Often charged annually for newly allocated or deforested land.
+Groschen (abbreviated ß or g):: Small denomination coin, often 1⁄24 or 1⁄30 of a Reichstaler, depending on region
+and time.
 
-Reichstaler (abbreviated R.)::
-  Silver coin used as currency in many parts of the Holy Roman Empire and German states; one of the standard units of account.
+agio:: A surcharge or premium, often related to exchange rate adjustments or coin value variation. In this context,
+excluded from the rent total.
 
-Groschen (abbreviated ß or g)::
-  Small denomination coin, often 1⁄24 or 1⁄30 of a Reichstaler, depending on region and time.
+ad ter:: Latin shorthand, likely functioning here as “regarding” or “concerning,” pointing to a referenced rescript
+or decision.
 
-agio::
-  A surcharge or premium, often related to exchange rate adjustments or coin value variation. In this context, excluded from the rent total.
-
-ad ter::
-  Latin shorthand, likely functioning here as “regarding” or “concerning,” pointing to a referenced rescript or decision.
-
-S. Bückeburg::
-  Abbreviation for *Stadt Bückeburg* (City of Bückeburg), used as a closing location designation in official documents.
-
+S. Bückeburg:: Abbreviation for *Stadt Bückeburg* (City of Bückeburg), used as a closing location designation in
+official documents.
 
