--- a/modules/1237/pages/doc1-forestry-assessment.adoc
+++ b/modules/1237/pages/doc1-forestry-assessment.adoc
@@ -37,7 +37,7 @@ zu verkaufen, und der Krückeberg hätte sich
 verbindlich zu machen an einem anderen
 Platze im Förste für jeden zu fällende Pappel
 dreÿ Stetz-Stangen wieder zu pflanzen,
-                                  Maas forstenste
+                                  MKaas forstenste
 ____
 
 |
@@ -63,7 +63,7 @@ obligated to replant, in another
 location in the forest, three saplings 
 for each poplar that is felled.
 
-                   Maas, Forestry Officier
+                   MKaas, Forestry Officier
 ____
 |===
 
