--- a/modules/1237/pages/reminder-note.adoc
+++ b/modules/1237/pages/reminder-note.adoc
@@ -1,7 +1,7 @@
 = Reminder Note Regarding Chamber Directive on Berenbusch Woodland Boundaries (Oct 27, 1800)
 :page-role: wide
 
-This text is a brief note regarding the previous documenmt that was sent and also referencing yet another document.
+This text is a brief note regarding the previous document that was sent and also referencing yet another document.
 This can be seen from the contextual clues:
 
 * **"Auch wäre an den Inhalt…"**
