--- a/modules/689/nav.adoc
+++ b/modules/689/nav.adoc
@@ -1,3 +1,12 @@
 .xref:index.adoc[]
 //NLA BU, K 2, A Nr. 689
 * xref:cover.adoc[]
+* xref:doc1.adoc[]
+* xref:doc2.adoc[]
+* xref:doc3.adoc[]
+* xref:doc4.adoc[]
+* xref:doc5.adoc[]
+* xref:doc6.adoc[]
+* xref:doc7.adoc[]
+* xref:doc8.adoc[]
+* xref:doc9.adoc[]
