--- a/modules/689/pages/doc1.adoc
+++ b/modules/689/pages/doc1.adoc
@@ -6,6 +6,8 @@ image::02-r.png[link=self]
 
 image::03-l-original.png[link=self]
 
+== Transliteration and Translation
+
 ....
 NC. 438i                         
                          pr. inlen 2 Art. 1841
