--- a/modules/689/pages/doc1-ai.adoc
+++ b/modules/689/pages/doc1-ai.adoc
@@ -1,3 +1,7 @@
+
+image::03-r.png[link=self]
+
+image::
 ....
               Adi
 
@@ -27,4 +31,33 @@ nunmehro die angehrohte
 Execution, unter Andro-
 hung der Auspfandung
 zu
+....
+
+....
+zu erkennen ref: exp: contum:
+infidem
+       F Sander
+
+
+Dicretum
+
+
+Vorstehender Recef wird dem Verklag-
+ten in Abschrift mitgeheilt und
+nunmehr die Execution erkannt und
+den Amtsdiener Möller aufgegeben
+den Verklagten auf das Capital
+zu 133 Rthlr und Zinsen vom 9 April
+1833 zu 5 Procent zu 4 mas Gebühr
+in exequiren nur ihm anzudeuten,
+daß wenn die Execution frucht-
+los bleibe nu, binnen 14 Tagen
+keine Zahlung erfolgen, würde
+auf fermrass Unsuchen der Klä-
+ger sofort die Auspfandung
+erkannt und voll, wan werde
+ecr: Läkeberg 13t Juli 1841.
+F[rstlich Schaumburg Upp. Amt.
+
+Haudr   Yöcker
 ....
