--- a/modules/689/pages/doc1-ai.adoc
+++ b/modules/689/pages/doc1-ai.adoc
@@ -36,27 +36,28 @@ zu
 ....
 zu erkennen ref: exp: contum:
 infidem
-       F Sander
+       F. Sander
 
 
-Dicretum
+Decretum
 
 
-Vorstehender Recef wird dem Verklag-
+Vorstehender Recess wird dem Verklag-
 ten in Abschrift mitgeheilt und
 nunmehr die Execution erkannt und
-den Amtsdiener Möller aufgegeben
+den Amtsdiener Möller aufgegeben,
 den Verklagten auf das Capital
-zu 133 Rthlr und Zinsen vom 9 April
-1833 zu 5 Procent zu 4 mas Gebühr
-in exequiren nur ihm anzudeuten,
+zu 133 [Rthlr struck through] 7 mgl und Zinsen vom 9ten April
+1833 zu 5 Procent zu 4 mgl Gebühr
+in exequiren und ihm anzudeuten,
 daß wenn die Execution frucht-
-los bleibe nu, binnen 14 Tagen
-keine Zahlung erfolgen, würde
-auf fermrass Unsuchen der Klä-
+los bleibe und binnen 14 Tagen
+keine Zahlung erfolgen würde,
+auf ferneres Ansuchen der Klä-
 ger sofort die Auspfandung
-erkannt und voll, wan werde
-ecr: Läkeberg 13t Juli 1841.
+erkannt und vollzogen werde.
+
+Decr: Bückeburg 13t Juli 1841.
 F[rstlich Schaumburg Upp. Amt.
 
 Haudr   Yöcker
