--- a/modules/689/pages/doc1-ai.adoc
+++ b/modules/689/pages/doc1-ai.adoc
@@ -50,7 +50,7 @@ den Verklagten auf das Capital
 zu 133 [Rthlr struck through] 7 mgl und Zinsen vom 9ten April
 1833 zu 5 Procent zu 4 mgl Gebühr
 in exequiren und ihm anzudeuten,
-daß wenn die Execution frucht-
+daß[,] wenn die Execution frucht-
 los bleibe und binnen 14 Tagen
 keine Zahlung erfolgen würde,
 auf ferneres Ansuchen der Klä-
