--- a/modules/689/pages/doc1-ai.adoc
+++ b/modules/689/pages/doc1-ai.adoc
@@ -30,10 +30,6 @@ April 1833 bezahlt habe,
 nunmehro die angehrohte
 Execution, unter Andro-
 hung der Auspfandung
-zu
-....
-
-....
 zu erkennen ref: exp: contum:
 infidem
        F. Sander
@@ -47,7 +43,7 @@ ten in Abschrift mitgeheilt und
 nunmehr die Execution erkannt und
 den Amtsdiener Möller aufgegeben,
 den Verklagten auf das Capital
-zu 133 [Rthlr struck through] 7 mgl und Zinsen vom 9ten April
+zu 133 Rthlr 7 mgl und Zinsen vom 9ten April
 1833 zu 5 Procent zu 4 mgl Gebühr
 in exequiren und ihm anzudeuten,
 daß[,] wenn die Execution frucht-
@@ -60,5 +56,59 @@ erkannt und vollzogen werde.
 Decr: Bückeburg 13t Juli 1841.
 F[rstlich Schaumburg Upp. Amt.
 
-Haudr   Yöcker
+Haadr   Yöcker [or Jöcker]
+....
+
+....
+Order
+
+Bückeburg, Amt Office
+10 July 1841
+
+In the matter of
+
+Hempel Söhne of Minden, Plaintiffs,
+          versus
+Colon Krückeberg, No. 10 in Berenbusch, Defendant,
+                 Remaining principal and
+                 interest.
+
+Advocate Meÿer, attorney for the
+plaintiffs, respectfully requests that,
+since the defendant Krückeberg has still
+not, as ordered by decree of 29 May and
+6 June of this year, paid the sum of
+133 Reichsthaler [Rthlr struck through] 7 Mariengroschen
+together with 5 percent interest from
+9 April 1833, the threatened
+execution be carried out,
+under threat of distraint
+(the legal seizure of property to compel payment).
+
+To be decided – referred, expedited, for default:
+in good faith.
+       F. Sander
+
+
+Decree
+
+The above decision is to be communicated
+to the defendant in copy, and execution is
+now ordered. The court officer Möller is
+directed to execute against the defendant
+for the principal sum of 133 Reichsthaler
+[Rthlr struck through] 7 Mariengroschen and interest
+from 9 April 1833 at 5 percent, with a
+fee of 4 Mariengroschen, and to inform him
+that if the execution proves unsuccessful
+and if no payment is made within
+14 days, then upon further request by
+the plaintiffs, distraint
+(the legal seizure of property to compel payment)
+will be ordered and carried out immediately.
+
+Decree: Bückeburg, 13 July 1841
+Fürstlich Schaumburg-Lippe Amt
+
+Haadr         Yöcker
 ....
