--- a/modules/689/pages/doc1-ai.adoc
+++ b/modules/689/pages/doc1-ai.adoc
@@ -13,7 +13,7 @@ den 10ten Juli 1841
 In Sachen
 
 der Hempel Söhne in Minden, Kläger,
-          contra
+          wider
 den Colon Krückeberg No. 10 in Beren-
 busch, Beklagten
                  [?]ote Capital und
