--- a/modules/689/pages/index.adoc
+++ b/modules/689/pages/index.adoc
@@ -1,1 +1,1 @@
-= A capital loan of 200 Reichstaler lent from the chamber treasury to the colonist Krückeberg No. 10 in Berenbusch.
+= 200 Reichstaler lent to Krückeberg No. 10 in Berenbusch.
